Add images for the webpage

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <nav>
-            <h1>Logo Here</h1>
+            <h1>kryo.</h1>
             <ul>
                 <li>Home</li>
-                <li>Bleeps</li>
+                <li>Photos</li>
                 <li>Contact</li>
             </ul>
         </nav>
@@ -20,14 +20,14 @@
 
     <section>
         <div>
-            <h1>Hi this is intro</h1>
-            <p>This is description</p>
-            <button>Pindutin mo ko</button>
+            <h1>What's up?</h1>
+            <p>This page is purely dedicated for my gaming self. Hi I'm kryo in the gaming world.</p>
+            <button>Let's Go!</button>
         </div>
 
 
         <div>
-            <img>
+            <img src="./images/1.jpg" alt="an old commodore and gameboy color">
         </div>
     </section>
 
