--- a/index.html
+++ b/index.html
@@ -5,16 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Landing Page</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Handlee&family=Monda&family=Shizuru&display=swap" rel="stylesheet">
+    <!-- End of Google Font -->
+
+    <!-- External CSS Link -->
+    <link rel="stylesheet" href="./style.css">
+    <!-- End of External CSS Link -->
+
 </head>
 <body>
-    <header>
+    <header id="home">
         <nav>
-            <h1>kryo.</h1>
-            <ul>
-                <li>Home</li>
-                <li>Photos</li>
-                <li>Contact</li>
-            </ul>
+            <div>
+                <h1>kryo.</h1>
+            </div>
+            
+            <div>
+                <span><a href="#home">Home</a></span>
+                <span><a href="#photos">Photos</a></span>
+                <span><a href="#contact">Contact</a></span>
+            </div>
         </nav>
     </header>
 
@@ -32,7 +46,7 @@
     </section>
 
 
-    <section>
+    <section id="photos">
         <h2>Some Peripherals</h2>
         
         <div>
@@ -66,7 +80,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="contact">
         <div>
             <div>
                 <h4>Hit me up! Let's G!</h4>
