Add style for section: quote

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     </section>
 
 
-    <section>
+    <section id="quote">
         <div>
-            <q>Don't worry guys, they say I'm a prodigy. Not my words! Not my words, baby!</q>
-            <h6>-Phoenix, Radiant in Valorant</h6>
+            <em><p>"Don't worry guys, they say I'm a prodigy. Not my words! Not my words, baby!"</p></em>
+            <h6>-<strong>Phoenix</strong>, Radiant in Valorant</h6>
         </div>
     </section>
 
