Add style for contact section

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     </section>
 
     <section id="contact">
-        <div>
-            <div>
+        <div class="contact-bg">
+            <div id="contact-info">
                 <h4>Hit me up! Let's G!</h4>
                 <p>Join my discord server and let's get grinding!</p>
             </div>
