Add back to top button

--- a/index.html
+++ b/index.html
@@ -102,5 +102,11 @@
         </div>
     </footer>
 
+    <!-- For back to top button -->
+    <a class="back-to-top-button" href="#home">
+        <div id="back-to-top">
+            <p>To Top</p>
+        </div>    
+    </a>
 </body>
 </html>
